ajout  jsdom pour querySelector non fonctionnel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 </head>
 <body>
 	toto
+<div id="grid">
+	<table class="tg">
+	  <tr>
+	    <th class="tg-031e"></th>
 
-<script type="text/javascript" src="built/main.js"></script>	
+	  </tr>
+	</table>  
+</div>
+
+<script type="text/javascript" src="dist/bro.js"></script>	
+
 </body>
 </html>
