ajout jquery fonctionnel

--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!doctype html>
 <html lang="fr">
-<head>
-<meta charset="UTF-8">
-</head>
-<body>
-	toto
-<div id="grid">
-	<table class="tg">
-	  <tr>
-	    <th class="tg-031e"></th>
-
-	  </tr>
-	</table>  
-</div>
+	<head>
+		<meta charset="UTF-8">
+		<style type="text/css">
+			body{
+					color:white;
+					background-color: #333;
+				}
 
 
-<script type="text/javascript" src="dist/bro.js"></script>	
+		</style>
+	</head>
+	<body>
+		<p>	toto</p>
+		<div class="grid" toto-data="test data attr">
+			<table class="tg">
+			  <tr>
+			    <th class="tg-031e"></th>
 
-</body>
+			  </tr>
+			</table>  
+		</div>
+
+
+		<script type="text/javascript" src="dist/bro.js"></script>	
+
+	</body>
 </html>
