la matrice est operationnelle

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 		</style>
 	</head>
-	<body>
-		<p>	toto</p>
+	<body ng-app="navalBattle">
+
+
+		<p>	toto {{ 2 + 2 }}</p>
 		<div class="grid" toto-data="test data attr">
 			<table class="tg">
 			  <tr>
 			    <th class="tg-031e"></th>
-
 			  </tr>
 			</table>  
 		</div>
