--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body ng-app="navalBattle">
 
 
-		<p>	toto {{ 2 + 2 }}</p>
+		<p>	test</p>
 		<div class="grid" toto-data="test data attr">
 			<table class="tg">
 			  <tr>
