--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 
 
-		<script type="text/javascript" src="dist/bro.js"></script>	
+		<script type="text/javascript" src="dist/navBattle.js"></script>	
 
 	</body>
 </html>
